--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -9,35 +9,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/img_Back_to_book"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text="Thông tin chính sách"
-            android:textColor="@color/black"
-            android:textSize="19sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/nunito_bold"
+            android:text="Thêm chính sách"
+            android:textColor="@color/green"
+            android:textSize="23sp" />
 
-        <ImageView
+        <Button
             android:id="@+id/img_savebook"
-            android:layout_width="30dp"
+            android:layout_width="80dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/check" />
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="22dp"
+            android:background="@drawable/button_luu"
+            android:fontFamily="@font/nunito_bold"
+            android:text="Lưu"
+            android:textAllCaps="false"
+            android:textColor="@color/blue"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -52,7 +49,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:text="Tên chính sách"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="17dp" />
 
         <EditText
@@ -63,10 +61,11 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:hint="Nhập tên chính sách ..."
+            android:hint="Nhập tên chính sách"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="16dp"  />
 
         <TextView
@@ -75,7 +74,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:text="Nội dung chính sách"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="17dp" />
 
         <EditText
@@ -87,10 +87,11 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/bg_textfield"
-            android:hint="Nhập nội dung chính sách ..."
+            android:hint="Nhập nội dung chính sách"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="16dp" />
 
     </LinearLayout>
