--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -9,36 +9,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/img_BackTTTK"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
             android:text="Thông tin tài khoản"
-            android:textColor="@color/black"
-            android:textSize="19dp"
-            android:textStyle="bold" />
+            android:textColor="@color/green"
+            android:textSize="23sp"
+            android:fontFamily="@font/nunito_bold" />
 
-        <ImageView
+        <Button
             android:id="@+id/img_SaveTTTK"
-            android:layout_width="30dp"
+            android:layout_width="80dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/check" />
-
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="22dp"
+            android:background="@drawable/button_luu"
+            android:text="Lưu"
+            android:textAllCaps="false"
+            android:textColor="@color/blue"
+            android:fontFamily="@font/nunito_bold"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -46,21 +42,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/img_AvatarAdmin"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/add_image" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
+            android:fontFamily="@font/nunito"
             android:text="Họ tên"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
             android:textSize="17dp" />
 
         <EditText
@@ -71,10 +60,12 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
+            android:fontFamily="@font/nunito"
+            android:hint="Nhập học tên"
             android:inputType="textPersonName"
-            android:hint="Nhập học tên ..."
             android:paddingLeft="20dp"
-            android:textColor="@color/black"
+            android:paddingRight="20dp"
+            android:textColor="@color/gray"
             android:textSize="16dp" />
 
         <TextView
@@ -82,8 +73,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
+            android:fontFamily="@font/nunito"
             android:text="Email"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
             android:textSize="17dp" />
 
         <EditText
@@ -94,10 +86,12 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:hint="Nhập email ..."
-            android:paddingLeft="20dp"
+            android:fontFamily="@font/nunito"
+            android:hint="Nhập email"
             android:inputType="textEmailAddress"
-            android:textColor="@color/black"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textColor="@color/gray"
             android:textSize="16dp" />
 
         <TextView
@@ -105,8 +99,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
+            android:fontFamily="@font/nunito"
             android:text="Mật khẩu hiện tại"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
             android:textSize="17dp" />
 
         <EditText
@@ -117,10 +112,12 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:hint="Nhập mật khẩu hiện tại ..."
+            android:fontFamily="@font/nunito"
+            android:hint="Nhập mật khẩu hiện tại"
             android:inputType="textPassword"
             android:paddingLeft="20dp"
-            android:textColor="@color/black"
+            android:paddingRight="20dp"
+            android:textColor="@color/gray"
             android:textSize="16dp" />
 
         <TextView
@@ -128,8 +125,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
+            android:fontFamily="@font/nunito"
             android:text="Mật khẩu mới"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
             android:textSize="17dp" />
 
         <EditText
@@ -140,10 +138,12 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:hint="Nhập mật khẩu mới ..."
-            android:paddingLeft="20dp"
-            android:textColor="@color/black"
+            android:fontFamily="@font/nunito"
+            android:hint="Nhập mật khẩu mới"
             android:inputType="textPassword"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textColor="@color/gray"
             android:textSize="16dp" />
 
     </LinearLayout>
