--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -9,35 +9,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/img_BackDSBV"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text="Bài viết"
-            android:textColor="@color/black"
-            android:textSize="19sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/nunito_bold"
+            android:text="Thêm bài viết"
+            android:textColor="@color/green"
+            android:textSize="23sp" />
 
-        <ImageView
+        <Button
             android:id="@+id/img_addPost"
-            android:layout_width="27dp"
+            android:layout_width="80dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/check" />
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="22dp"
+            android:background="@drawable/button_luu"
+            android:fontFamily="@font/nunito_bold"
+            android:text="Lưu"
+            android:textAllCaps="false"
+            android:textColor="@color/blue"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -60,7 +57,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:text="Tiêu đề"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="17dp" />
 
         <EditText
@@ -75,7 +73,8 @@
             android:inputType="textMultiLine"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="16dp" />
 
         <TextView
@@ -84,7 +83,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:text="Nội dung"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="17dp" />
 
         <EditText
@@ -99,7 +99,8 @@
             android:inputType="textMultiLine"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="16dp" />
 
     </LinearLayout>
