--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -9,35 +9,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/img_BackDSSP"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text="Sản phẩm"
-            android:textColor="@color/black"
-            android:textSize="19sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/nunito_bold"
+            android:text="Thêm sản phẩm"
+            android:textColor="@color/green"
+            android:textSize="23sp" />
 
-        <ImageView
+        <Button
             android:id="@+id/btn_LuuSP"
-            android:layout_width="30dp"
+            android:layout_width="80dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/check" />
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="22dp"
+            android:background="@drawable/button_them"
+            android:fontFamily="@font/nunito_bold"
+            android:text="Thêm"
+            android:textAllCaps="false"
+            android:textColor="@color/green"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <ScrollView
@@ -60,15 +57,19 @@
                 android:id="@+id/chb_Spmoi"
                 android:layout_width="200dp"
                 android:layout_height="40dp"
-                android:text="Sản phẩm mới"/>
+                android:layout_marginLeft="20dp"
+                android:text="Sản phẩm mới"
+                android:textColor="@color/gray"
+                android:fontFamily="@font/nunito"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/nunito"
                 android:text="Danh mục sản phẩm"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <TextView
@@ -79,10 +80,11 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Chọn danh mục ..."
                 android:paddingLeft="20dp"
                 android:paddingTop="13dp"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
             <TextView
@@ -90,8 +92,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/nunito"
                 android:text="Mã sản phẩm"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <EditText
@@ -102,10 +105,11 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Nhập mã sản phẩm ..."
                 android:inputType="text"
                 android:paddingLeft="20dp"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
             <TextView
@@ -113,8 +117,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/nunito"
                 android:text="Tên sản phẩm"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <EditText
@@ -125,10 +130,11 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Nhập tên sản phẩm ..."
                 android:inputType="text"
                 android:paddingLeft="20dp"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
             <TextView
@@ -136,8 +142,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/nunito"
                 android:text="Giá size S"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <EditText
@@ -148,10 +155,11 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Nhập giá size S ..."
                 android:inputType="number"
                 android:paddingLeft="20dp"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
             <TextView
@@ -160,8 +168,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/nunito"
                 android:text="Giá size M"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <EditText
@@ -172,10 +181,11 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Nhập giá size M ..."
                 android:inputType="number"
                 android:paddingLeft="20dp"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
             <TextView
@@ -184,8 +194,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/nunito"
                 android:text="Giá size L"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <EditText
@@ -196,10 +207,11 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Nhập giá size L ..."
                 android:inputType="number"
                 android:paddingLeft="20dp"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
             <TextView
@@ -207,8 +219,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/nunito"
                 android:text="Giá khuyến mãi"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <EditText
@@ -219,10 +232,11 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Nhập giá khuyến mãi ..."
                 android:inputType="number"
                 android:paddingLeft="20dp"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
             <TextView
@@ -230,8 +244,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/nunito"
                 android:text="Mô tả"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <EditText
@@ -243,10 +258,11 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Nhập mô tả sản phẩm ..."
                 android:inputType="textMultiLine"
                 android:paddingLeft="20dp"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
         </LinearLayout>
