--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="37dp"
             android:layout_margin="5dp"
-            android:background="@drawable/bg_textfield"
+            android:background="@drawable/search"
             app:iconifiedByDefault="false"
             app:queryHint="Search..." />
     </LinearLayout>
